2018-09-06  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Do not call stk_param_init_ if param is an object

	* param/estim/stk_param_init.m: Do not call STK's default
	stk_param_init_ procedure if model.param is an object.

2018-08-22  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Clarify how we determine the value of do_estim_lnv

	* param/estim/stk_param_init.m: Clarify how we determine the value
	of do_estim_lnv.  In the (undocumented) case of an heteroscedastic
	noise represented by a vector of variances, we ne longer issue an
	error is do_estim_lnv is true, we simply ignore it.  At the same
	time, this patch improves the way we deal with noise model
	objects, since previously we had a few old-style lnv(:)
	expressions in here.

2018-08-16  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_example_kb09.m: Update unit tests

	* examples/01_kriging_basics/stk_example_kb09.m: Update unit
	tests, which still referred to the old HOMOSCEDASTIC_NOISE variable.

2018-07-25  Julien Bect  <julien.bect@centralesupelec.fr>

	Introduce exceptions to the way missing lnv is handled

	* param/estim/stk_param_init.m: Considers that lnv is nan, instead
	of -Inf as everywhere else, in case of missing lnv field if lnv
	estimation is explicitely requested.
	* param/estim/stk_param_init_lnv.m: Considers that lnv is nan in
	case of missing lnv field.

	stk_param_init_lnv.m: Experimental support for noise model objects

	* param/estim/stk_param_init_lnv.m: Introduce experimental support
	for noise model objects.
	* param/estim/stk_param_estim.m: Let stk_param_init_lnv hande the
	object case.

2018-07-24  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Errors out if the first arg is not a structure

	* param/estim/stk_param_init.m: Errors out if the first argument
	is not a structure, since we expect a model structure here.

	stk_param_estim.m: Fix recently introduced error
